--- a/Decision Trees.ipynb
+++ b/Decision Trees.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 1,
    "id": "cb2b98f7-6bbe-42bd-87d9-c951d325eeaa",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "97fbce10-d467-46ae-9d77-9931c86c468e",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "7fc3e272-b887-44a4-8f6f-24bb848d620e",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
        "[100 rows x 8 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 4,
    "id": "8bbfa83f-760f-4ccf-965a-b5be92e6d530",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
        "100"
       ]
      },
-     "execution_count": 327,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 5,
    "id": "d1980247-2b9a-4adc-b8b5-f19d99819364",
    "metadata": {},
    "outputs": [],
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 6,
    "id": "f7694552-52ec-46f1-af96-ed5707696fbb",
    "metadata": {},
    "outputs": [
@@ -377,7 +377,7 @@
        "5     F           3         5       3       N"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 7,
    "id": "846878ff-c78a-4340-9168-67fed230be57",
    "metadata": {},
    "outputs": [],
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 8,
    "id": "a22b65e3-b747-4e61-86a7-b29cc17a06b5",
    "metadata": {},
    "outputs": [],
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 9,
    "id": "80f59eeb-a79c-44ee-bff2-5addf499228e",
    "metadata": {},
    "outputs": [],
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 10,
    "id": "4c3345a0-143b-406a-bd87-96345eadf2c0",
    "metadata": {},
    "outputs": [],
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 11,
    "id": "27ffaa39-cbbf-4711-9e9a-5b3513787e17",
    "metadata": {},
    "outputs": [],
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 12,
    "id": "c689e70e-5bc1-43fb-85f8-11cbd07c7d42",
    "metadata": {},
    "outputs": [],
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 13,
    "id": "51e6de2d-dbcb-48f7-bff7-a0e8db0dc8fc",
    "metadata": {},
    "outputs": [
@@ -489,7 +489,7 @@
        "{4: [(0, 'T'), (1, 'T'), (4, 'N')], 3: [(2, 'N'), (5, 'N')], 5: [(3, 'N')]}"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 14,
    "id": "78fb5442-5f6c-4883-aa46-8ce802c682a0",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
        "np.float64(0.9182958340544896)"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 15,
    "id": "62f70add-5485-447a-8c55-28e068fadd00",
    "metadata": {},
    "outputs": [
@@ -533,7 +533,7 @@
        "np.float64(0.4591479170272448)"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 16,
    "id": "c7153df0-dac0-4911-8276-469df5128e79",
    "metadata": {},
    "outputs": [
@@ -555,7 +555,7 @@
        "np.float64(0.4591479170272448)"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 17,
    "id": "3a678507-4f88-4e57-bdc2-1e40b4358edd",
    "metadata": {},
    "outputs": [
@@ -576,7 +576,7 @@
        "{4: [(0, 'T'), (2, 'N'), (4, 'N')], 5: [(1, 'T'), (5, 'N')], 3: [(3, 'N')]}"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 18,
    "id": "7f33e77a-6966-4b4f-86cc-de555bac8b71",
    "metadata": {},
    "outputs": [
@@ -598,7 +598,7 @@
        "np.float64(0.792481250360578)"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 19,
    "id": "d9e22359-2a66-4069-80bd-fe4739485e7a",
    "metadata": {},
    "outputs": [
@@ -620,7 +620,7 @@
        "np.float64(0.12581458369391152)"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 20,
    "id": "498c4481-52a4-4202-ba57-32ed0b0285c6",
    "metadata": {},
    "outputs": [
@@ -641,7 +641,7 @@
        "{5: [(0, 'T'), (3, 'N')], 4: [(1, 'T'), (2, 'N'), (4, 'N')], 3: [(5, 'N')]}"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 21,
    "id": "d8cfba76-abb4-46b9-b3f8-3e79327da4dc",
    "metadata": {},
    "outputs": [
@@ -663,7 +663,7 @@
        "np.float64(0.792481250360578)"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 22,
    "id": "38067dbf-852f-43a6-93cb-486728a42cd0",
    "metadata": {},
    "outputs": [
@@ -685,7 +685,7 @@
        "np.float64(0.12581458369391152)"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 23,
    "id": "2ddb2669-03b6-4888-8f53-62a3f95f0e81",
    "metadata": {},
    "outputs": [
@@ -706,7 +706,7 @@
        "{np.int64(4): [(0, 'T'), (4, 'N')], np.int64(5): [(1, 'T')]}"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 24,
    "id": "3d1c46cb-965a-4813-8304-b26399717ac6",
    "metadata": {},
    "outputs": [
@@ -728,7 +728,7 @@
        "np.float64(0.6666666666666666)"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 25,
    "id": "a9beb9f6-b07a-44e7-ae38-0fd7dd18fe5e",
    "metadata": {},
    "outputs": [
@@ -750,7 +750,7 @@
        "np.float64(0.2516291673878229)"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 26,
    "id": "3716010a-bba2-41c4-9c56-b80890d5e61e",
    "metadata": {},
    "outputs": [
@@ -771,7 +771,7 @@
        "{np.int64(5): [(0, 'T')], np.int64(4): [(1, 'T'), (4, 'N')]}"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 27,
    "id": "161f29b5-9b30-4463-99c6-7880ee5e40e5",
    "metadata": {},
    "outputs": [
@@ -793,7 +793,7 @@
        "np.float64(0.6666666666666666)"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 28,
    "id": "defc08f9-3184-4be8-aa52-5c6b73f9aff3",
    "metadata": {},
    "outputs": [
@@ -815,7 +815,7 @@
        "np.float64(0.2516291673878229)"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 29,
    "id": "e36d0907-07d5-420d-a0cb-312fbed7c6e1",
    "metadata": {},
    "outputs": [
@@ -836,7 +836,7 @@
        "True"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 30,
    "id": "6744d690-ef02-4183-9878-67c7c31f2c95",
    "metadata": {},
    "outputs": [],
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 31,
    "id": "ecc4751f-a368-4a76-8f7c-33ae6063e370",
    "metadata": {},
    "outputs": [],
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 32,
    "id": "67206037-810d-45db-b164-e06e4fb5e99e",
    "metadata": {},
    "outputs": [
@@ -977,7 +977,7 @@
        "  5: 'N'}}"
       ]
      },
-     "execution_count": 364,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 33,
    "id": "8720f81d-24e7-4a1d-aa77-9e44a21888db",
    "metadata": {},
    "outputs": [
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 34,
    "id": "3b13d77d-83f4-4eb2-be03-add223c69b65",
    "metadata": {
     "scrolled": true
@@ -1098,7 +1098,7 @@
        "  71: 0}}"
       ]
      },
-     "execution_count": 366,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,7 +1110,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 162,
+   "id": "be9b479b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def enumerate_tree(tree, parent, depth):\n",
+    "    item_i = 0\n",
+    "    for i,k in sorted(enumerate(tree), key=lambda x:x[1]):     \n",
+    "        if isinstance(tree[k], dict):\n",
+    "            enumerate_tree(tree[k], k, depth + 1)\n",
+    "        else:\n",
+    "            sign = ' > ' if item_i == len(tree) - 1 else ' <= '\n",
+    "            if isinstance(k, np.int64) or isinstance(k, str):\n",
+    "                sign = ' = '\n",
+    "            print('|     '*(depth//2),'|---- ', parent, sign , k, sep='')\n",
+    "            print('|     '*(depth//2),'|---- ', tree[k], sep='')\n",
+    "        item_i+= 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "id": "8fd55269",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|---- Age <= 1\n",
+      "|---- 1\n",
+      "|---- Age <= 2\n",
+      "|---- 0\n",
+      "|---- Age <= 3\n",
+      "|---- 1\n",
+      "|     |---- Sex = female\n",
+      "|     |---- 1\n",
+      "|     |---- Sex = male\n",
+      "|     |---- 0\n",
+      "|---- Age <= 5\n",
+      "|---- 1\n",
+      "|---- Age <= 6\n",
+      "|---- 1\n",
+      "|---- Age <= 7\n",
+      "|---- 0\n",
+      "|---- Age <= 8\n",
+      "|---- 0\n",
+      "|---- Age <= 11\n",
+      "|---- 0\n",
+      "|---- Age <= 12\n",
+      "|---- 1\n",
+      "|---- Age <= 13\n",
+      "|---- 1\n",
+      "|     |---- Pclass = 1\n",
+      "|     |---- 1\n",
+      "|     |---- Pclass = 2\n",
+      "|     |---- 1\n",
+      "|     |     |---- SibSp = 0\n",
+      "|     |     |---- 1\n",
+      "|     |     |---- SibSp = 1\n",
+      "|     |     |---- 0\n",
+      "|     |     |---- SibSp = 2\n",
+      "|     |     |---- 1\n",
+      "|     |     |---- SibSp = 3\n",
+      "|     |     |---- 1\n",
+      "|     |     |---- SibSp = 4\n",
+      "|     |     |---- 1\n",
+      "|     |     |---- SibSp = 5\n",
+      "|     |     |---- 1\n",
+      "|---- Age <= 15\n",
+      "|---- 1\n",
+      "|---- Age <= 16\n",
+      "|---- 0\n",
+      "|---- Age <= 17\n",
+      "|---- 1\n",
+      "|     |---- SibSp = 0\n",
+      "|     |---- 1\n",
+      "|     |---- SibSp = 1\n",
+      "|     |---- 0\n",
+      "|     |---- SibSp = 2\n",
+      "|     |---- 0\n",
+      "|     |---- SibSp = 3\n",
+      "|     |---- 0\n",
+      "|     |---- SibSp = 4\n",
+      "|     |---- 0\n",
+      "|     |---- SibSp = 5\n",
+      "|     |---- 0\n",
+      "|     |---- Sex = female\n",
+      "|     |---- 1\n",
+      "|     |---- Sex = male\n",
+      "|     |---- 0\n",
+      "|---- Age <= 20\n",
+      "|---- 0\n",
+      "|     |---- Sex = female\n",
+      "|     |---- 1\n",
+      "|     |---- Sex = male\n",
+      "|     |---- 0\n",
+      "|---- Age <= 22\n",
+      "|---- 0\n",
+      "|---- Age <= 23\n",
+      "|---- 1\n",
+      "|---- Age <= 24\n",
+      "|---- 0\n",
+      "|---- Age <= 25\n",
+      "|---- 0\n",
+      "|     |---- Sex = female\n",
+      "|     |---- 1\n",
+      "|     |---- Sex = male\n",
+      "|     |---- 0\n",
+      "|     |---- Sex = female\n",
+      "|     |---- 1\n",
+      "|     |---- Sex = male\n",
+      "|     |---- 0\n",
+      "|     |     |---- SibSp = 0\n",
+      "|     |     |---- 1\n",
+      "|     |     |---- SibSp = 1\n",
+      "|     |     |---- 0\n",
+      "|     |     |---- SibSp = 2\n",
+      "|     |     |---- 1\n",
+      "|     |     |---- SibSp = 3\n",
+      "|     |     |---- 1\n",
+      "|     |     |---- SibSp = 4\n",
+      "|     |     |---- 1\n",
+      "|     |     |---- SibSp = 5\n",
+      "|     |     |---- 1\n",
+      "|     |---- Pclass = 2\n",
+      "|     |---- 0\n",
+      "|     |---- Pclass = 3\n",
+      "|     |---- 0\n",
+      "|     |---- Sex = female\n",
+      "|     |---- 1\n",
+      "|     |---- Sex = male\n",
+      "|     |---- 0\n",
+      "|---- Age <= 30\n",
+      "|---- 1\n",
+      "|---- Age <= 31\n",
+      "|---- 0\n",
+      "|---- Age <= 32\n",
+      "|---- 0\n",
+      "|---- Age <= 33\n",
+      "|---- 1\n",
+      "|     |---- Sex = female\n",
+      "|     |---- 1\n",
+      "|     |---- Sex = male\n",
+      "|     |---- 0\n",
+      "|     |---- Pclass = 1\n",
+      "|     |---- 1\n",
+      "|     |---- Pclass = 2\n",
+      "|     |---- 0\n",
+      "|     |---- Pclass = 3\n",
+      "|     |---- 0\n",
+      "|---- Age <= 37\n",
+      "|---- 0\n",
+      "|---- Age <= 38\n",
+      "|---- 1\n",
+      "|---- Age <= 39\n",
+      "|---- 0\n",
+      "|     |---- Pclass = 1\n",
+      "|     |---- 1\n",
+      "|     |---- Pclass = 2\n",
+      "|     |---- 1\n",
+      "|     |---- Pclass = 3\n",
+      "|     |---- 0\n",
+      "|---- Age <= 41\n",
+      "|---- 0\n",
+      "|---- Age <= 42\n",
+      "|---- 0\n",
+      "|---- Age <= 44\n",
+      "|---- 0\n",
+      "|---- Age <= 45\n",
+      "|---- 0\n",
+      "|---- Age <= 46\n",
+      "|---- 0\n",
+      "|---- Age <= 49\n",
+      "|---- 1\n",
+      "|---- Age <= 52\n",
+      "|---- 0\n",
+      "|---- Age <= 54\n",
+      "|---- 0\n",
+      "|---- Age <= 55\n",
+      "|---- 1\n",
+      "|     |---- Pclass = 1\n",
+      "|     |---- 0\n",
+      "|     |---- Pclass = 2\n",
+      "|     |---- 0\n",
+      "|     |---- Pclass = 3\n",
+      "|     |---- 1\n",
+      "|---- Age <= 58\n",
+      "|---- 1\n",
+      "|---- Age <= 59\n",
+      "|---- 0\n",
+      "|---- Age <= 63\n",
+      "|---- 1\n",
+      "|---- Age <= 65\n",
+      "|---- 0\n",
+      "|---- Age <= 66\n",
+      "|---- 0\n",
+      "|---- Age <= 71\n",
+      "|---- 0\n",
+      "|---- Age <= 77\n",
+      "|---- 1\n",
+      "|---- Age > 78\n",
+      "|---- 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "enumerate_tree(model, None, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "17a2e9f3-1113-43ec-a208-6fc30db07f80",
    "metadata": {},
    "outputs": [],
@@ -1129,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 36,
    "id": "3a652cca-e68e-46dd-8163-d6c4c0ffb7aa",
    "metadata": {},
    "outputs": [
@@ -1139,7 +1351,7 @@
        "0"
       ]
      },
-     "execution_count": 368,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 38,
    "id": "71729c4c-b6ec-4e5a-94ba-a78eacc27d4f",
    "metadata": {},
    "outputs": [
@@ -1168,7 +1380,7 @@
        "Name: 4, dtype: object"
       ]
      },
-     "execution_count": 369,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1188,7 +1400,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -1202,7 +1414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
