--- a/Decision Trees.ipynb
+++ b/Decision Trees.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "id": "cb2b98f7-6bbe-42bd-87d9-c951d325eeaa",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "id": "97fbce10-d467-46ae-9d77-9931c86c468e",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "id": "7fc3e272-b887-44a4-8f6f-24bb848d620e",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
        "[100 rows x 8 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "id": "8bbfa83f-760f-4ccf-965a-b5be92e6d530",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
        "100"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "id": "d1980247-2b9a-4adc-b8b5-f19d99819364",
    "metadata": {},
    "outputs": [],
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "id": "f7694552-52ec-46f1-af96-ed5707696fbb",
    "metadata": {},
    "outputs": [
@@ -377,7 +377,7 @@
        "5     F           3         5       3       N"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,11 +396,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "id": "846878ff-c78a-4340-9168-67fed230be57",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# measure of dissorder, how impure a set of classes is, if all elements belong to one class entropy is 0\n",
     "def entropy(part):\n",
     "    labels = Counter(part)\n",
     "    p = np.array(list(labels.values())) / labels.total()\n",
@@ -409,11 +410,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "id": "a22b65e3-b747-4e61-86a7-b29cc17a06b5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# how much uncertainty remains in one random variable if we know the value of other variable\n",
     "def cond_entropy(division):\n",
     "    sizes = np.array([len(x) for x in division.values()])\n",
     "    freqs = sizes / sizes.sum()\n",
@@ -423,22 +425,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "id": "80f59eeb-a79c-44ee-bff2-5addf499228e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# how much we reduce the entropy\n",
     "def gain(initial_entropy, conditional_entropy):\n",
     "    return initial_entropy - conditional_entropy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "4c3345a0-143b-406a-bd87-96345eadf2c0",
+   "execution_count": null,
+   "id": "27ffaa39-cbbf-4711-9e9a-5b3513787e17",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# only for first iteration, split dataset based on divisor column, with dividend column values\n",
+    "def initial_divide(doc, divisor, dividend):\n",
+    "    division = {}\n",
+    "    for i, row in doc.iterrows():\n",
+    "        if row[divisor] not in division:\n",
+    "            division[row[divisor]] = []\n",
+    "        division[row[divisor]].append((i, row[dividend]))\n",
+    "    return division"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f2d54f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for other iterations, same as initial, but works on subsets\n",
     "def divide(doc, subset, divisor):\n",
     "    division = {}\n",
     "    for i, label in subset:\n",
@@ -451,23 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "27ffaa39-cbbf-4711-9e9a-5b3513787e17",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def initial_divide(doc, divisor, dividend):\n",
-    "    division = {}\n",
-    "    for i, row in doc.iterrows():\n",
-    "        if row[divisor] not in division:\n",
-    "            division[row[divisor]] = []\n",
-    "        division[row[divisor]].append((i, row[dividend]))\n",
-    "    return division"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "c689e70e-5bc1-43fb-85f8-11cbd07c7d42",
    "metadata": {},
    "outputs": [],
@@ -479,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "51e6de2d-dbcb-48f7-bff7-a0e8db0dc8fc",
    "metadata": {},
    "outputs": [
@@ -489,7 +494,7 @@
        "{4: [(0, 'T'), (1, 'T'), (4, 'N')], 3: [(2, 'N'), (5, 'N')], 5: [(3, 'N')]}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "78fb5442-5f6c-4883-aa46-8ce802c682a0",
    "metadata": {},
    "outputs": [
@@ -511,7 +516,7 @@
        "np.float64(0.9182958340544896)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "62f70add-5485-447a-8c55-28e068fadd00",
    "metadata": {},
    "outputs": [
@@ -533,7 +538,7 @@
        "np.float64(0.4591479170272448)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "c7153df0-dac0-4911-8276-469df5128e79",
    "metadata": {},
    "outputs": [
@@ -555,7 +560,7 @@
        "np.float64(0.4591479170272448)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "3a678507-4f88-4e57-bdc2-1e40b4358edd",
    "metadata": {},
    "outputs": [
@@ -576,7 +581,7 @@
        "{4: [(0, 'T'), (2, 'N'), (4, 'N')], 5: [(1, 'T'), (5, 'N')], 3: [(3, 'N')]}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "7f33e77a-6966-4b4f-86cc-de555bac8b71",
    "metadata": {},
    "outputs": [
@@ -598,7 +603,7 @@
        "np.float64(0.792481250360578)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "d9e22359-2a66-4069-80bd-fe4739485e7a",
    "metadata": {},
    "outputs": [
@@ -620,7 +625,7 @@
        "np.float64(0.12581458369391152)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "498c4481-52a4-4202-ba57-32ed0b0285c6",
    "metadata": {},
    "outputs": [
@@ -641,7 +646,7 @@
        "{5: [(0, 'T'), (3, 'N')], 4: [(1, 'T'), (2, 'N'), (4, 'N')], 3: [(5, 'N')]}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "d8cfba76-abb4-46b9-b3f8-3e79327da4dc",
    "metadata": {},
    "outputs": [
@@ -663,7 +668,7 @@
        "np.float64(0.792481250360578)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "38067dbf-852f-43a6-93cb-486728a42cd0",
    "metadata": {},
    "outputs": [
@@ -685,7 +690,7 @@
        "np.float64(0.12581458369391152)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "2ddb2669-03b6-4888-8f53-62a3f95f0e81",
    "metadata": {},
    "outputs": [
@@ -706,7 +711,7 @@
        "{np.int64(4): [(0, 'T'), (4, 'N')], np.int64(5): [(1, 'T')]}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "3d1c46cb-965a-4813-8304-b26399717ac6",
    "metadata": {},
    "outputs": [
@@ -728,7 +733,7 @@
        "np.float64(0.6666666666666666)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "a9beb9f6-b07a-44e7-ae38-0fd7dd18fe5e",
    "metadata": {},
    "outputs": [
@@ -750,7 +755,7 @@
        "np.float64(0.2516291673878229)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "3716010a-bba2-41c4-9c56-b80890d5e61e",
    "metadata": {},
    "outputs": [
@@ -771,7 +776,7 @@
        "{np.int64(5): [(0, 'T')], np.int64(4): [(1, 'T'), (4, 'N')]}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "161f29b5-9b30-4463-99c6-7880ee5e40e5",
    "metadata": {},
    "outputs": [
@@ -793,7 +798,7 @@
        "np.float64(0.6666666666666666)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "defc08f9-3184-4be8-aa52-5c6b73f9aff3",
    "metadata": {},
    "outputs": [
@@ -815,7 +820,7 @@
        "np.float64(0.2516291673878229)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "e36d0907-07d5-420d-a0cb-312fbed7c6e1",
    "metadata": {},
    "outputs": [
@@ -836,7 +841,7 @@
        "True"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "6744d690-ef02-4183-9878-67c7c31f2c95",
    "metadata": {},
    "outputs": [],
@@ -865,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "ecc4751f-a368-4a76-8f7c-33ae6063e370",
    "metadata": {},
    "outputs": [],
@@ -877,7 +882,7 @@
     "    columns = doc.columns.drop(label)\n",
     "\n",
     "    # calculate initial division entropy gains\n",
-    "    # select the best division\n",
+    "    # select the best division (biggest gain)\n",
     "    best_initial_division = None\n",
     "    best_gain = 0\n",
     "    best_column = None\n",
@@ -961,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "67206037-810d-45db-b164-e06e4fb5e99e",
    "metadata": {},
    "outputs": [
@@ -977,7 +982,7 @@
        "  5: 'N'}}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "8720f81d-24e7-4a1d-aa77-9e44a21888db",
    "metadata": {},
    "outputs": [
@@ -1013,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "3b13d77d-83f4-4eb2-be03-add223c69b65",
    "metadata": {
     "scrolled": true
@@ -1098,7 +1103,7 @@
        "  71: 0}}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 37,
    "id": "be9b479b",
    "metadata": {},
    "outputs": [],
@@ -1131,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 38,
    "id": "8fd55269",
    "metadata": {},
    "outputs": [
@@ -1322,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "id": "17a2e9f3-1113-43ec-a208-6fc30db07f80",
    "metadata": {},
    "outputs": [],
@@ -1341,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "id": "3a652cca-e68e-46dd-8163-d6c4c0ffb7aa",
    "metadata": {},
    "outputs": [
@@ -1351,7 +1356,7 @@
        "0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1362,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "id": "71729c4c-b6ec-4e5a-94ba-a78eacc27d4f",
    "metadata": {},
    "outputs": [
@@ -1380,7 +1385,7 @@
        "Name: 4, dtype: object"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
