--- a/DecisionTree.ipynb
+++ b/DecisionTree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 214,
    "id": "3fe06475-f688-4cde-8e9b-e2075b166625",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 215,
    "id": "88a80ebb-fa5f-4b26-832f-b702b95a67f1",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "[100 rows x 6 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 216,
    "id": "3b89c2f5-1ed8-4a5e-b741-bac15a94e4a8",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 217,
    "id": "5b906239-e8a0-49f2-8289-038276feb143",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 218,
    "id": "24e31cea-0e3b-4bc6-99bc-789e1f80ce1a",
    "metadata": {},
    "outputs": [],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 219,
    "id": "5ec90481-5a9b-4112-8bfe-02b61a31de63",
    "metadata": {},
    "outputs": [],
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 220,
    "id": "a492e56e-5e69-41a8-8152-599010df1eaf",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 221,
    "id": "a0c06721-862e-4bcc-82ec-497cc890a355",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 222,
    "id": "12d07272-a95d-45c1-a8e9-2111d850b99c",
    "metadata": {},
    "outputs": [],
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 223,
    "id": "904b9075-61d5-4d9c-91c5-69c71934bad0",
    "metadata": {},
    "outputs": [],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 224,
    "id": "416769e7-763b-4a5d-a888-db24c58c7559",
    "metadata": {},
    "outputs": [],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 225,
    "id": "c2ce2b25-f1aa-4cf1-9c2c-bdc3f0a7f588",
    "metadata": {},
    "outputs": [],
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 226,
    "id": "2153c447-8c53-4a97-aa2c-f031e3e42cf6",
    "metadata": {},
    "outputs": [],
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 227,
    "id": "a1690103-e77f-4fe8-956c-90f5409b30ec",
    "metadata": {},
    "outputs": [],
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 228,
    "id": "8d987ad5-3096-4145-b672-2b5ff8a55afa",
    "metadata": {},
    "outputs": [],
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 229,
    "id": "6c056347-3e1a-4ce3-b911-19837dfef2ae",
    "metadata": {},
    "outputs": [],
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 230,
    "id": "b927ed65-a4d1-4d02-8e3c-bf72c3c6f0bb",
    "metadata": {},
    "outputs": [],
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 231,
    "id": "6f4d5dc4-4f1b-4e27-9d9f-290f98e0b627",
    "metadata": {},
    "outputs": [],
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 232,
    "id": "6fc87ec9-fca9-4f47-9eb3-c0509dec8e9b",
    "metadata": {},
    "outputs": [
@@ -574,6 +574,32 @@
       "ClassNode(\n",
       "    name: Sex,\n",
       "    edges: {\n",
+      "        male: IntervalNode(\n",
+      "            name: Pclass,\n",
+      "            tboundary: 3,\n",
+      "            smaller: IntervalNode(\n",
+      "                name: Age,\n",
+      "                tboundary: 29,\n",
+      "                smaller: IntervalNode(\n",
+      "                    name: SibSp,\n",
+      "                    tboundary: 1,\n",
+      "                    smaller: IntervalNode(\n",
+      "                        name: Pclass,\n",
+      "                        tboundary: 2,\n",
+      "                        smaller: LeafNode(1),\n",
+      "                        greater_or_equal: IntervalNode(\n",
+      "                            name: Age,\n",
+      "                            tboundary: 21,\n",
+      "                            smaller: LeafNode(1),\n",
+      "                            greater_or_equal: LeafNode(0)\n",
+      "                        )\n",
+      "                    ),\n",
+      "                    greater_or_equal: LeafNode(0)\n",
+      "                ),\n",
+      "                greater_or_equal: LeafNode(0)\n",
+      "            ),\n",
+      "            greater_or_equal: LeafNode(0)\n",
+      "        ),\n",
       "        female: IntervalNode(\n",
       "            name: SibSp,\n",
       "            tboundary: 1,\n",
@@ -583,85 +609,14 @@
       "                tboundary: 3,\n",
       "                smaller: LeafNode(1),\n",
       "                greater_or_equal: IntervalNode(\n",
-      "                    name: Age,\n",
-      "                    tboundary: 8,\n",
-      "                    smaller: LeafNode(1),\n",
-      "                    greater_or_equal: IntervalNode(\n",
-      "                        name: Parch,\n",
-      "                        tboundary: 5,\n",
-      "                        smaller: IntervalNode(\n",
-      "                            name: Age,\n",
-      "                            tboundary: 33,\n",
-      "                            smaller: IntervalNode(\n",
-      "                                name: SibSp,\n",
-      "                                tboundary: 4,\n",
-      "                                smaller: LeafNode(0),\n",
-      "                                greater_or_equal: IntervalNode(\n",
-      "                                    name: Age,\n",
-      "                                    tboundary: 17,\n",
-      "                                    smaller: LeafNode(0),\n",
-      "                                    greater_or_equal: LeafNode(1)\n",
-      "                                )\n",
-      "                            ),\n",
-      "                            greater_or_equal: LeafNode(1)\n",
-      "                        ),\n",
-      "                        greater_or_equal: LeafNode(1)\n",
-      "                    )\n",
-      "                )\n",
-      "            )\n",
-      "        ),\n",
-      "        male: IntervalNode(\n",
-      "            name: Age,\n",
-      "            tboundary: 2,\n",
-      "            smaller: LeafNode(1),\n",
-      "            greater_or_equal: IntervalNode(\n",
-      "                name: Pclass,\n",
-      "                tboundary: 3,\n",
-      "                smaller: IntervalNode(\n",
-      "                    name: Age,\n",
-      "                    tboundary: 28,\n",
-      "                    smaller: IntervalNode(\n",
-      "                        name: SibSp,\n",
-      "                        tboundary: 3,\n",
-      "                        smaller: LeafNode(1),\n",
-      "                        greater_or_equal: LeafNode(0)\n",
-      "                    ),\n",
-      "                    greater_or_equal: IntervalNode(\n",
-      "                        name: Pclass,\n",
-      "                        tboundary: 1,\n",
-      "                        smaller: LeafNode(0),\n",
-      "                        greater_or_equal: IntervalNode(\n",
-      "                            name: Age,\n",
-      "                            tboundary: 40,\n",
-      "                            smaller: LeafNode(0),\n",
-      "                            greater_or_equal: IntervalNode(\n",
-      "                                name: Pclass,\n",
-      "                                tboundary: 1,\n",
-      "                                smaller: LeafNode(0),\n",
-      "                                greater_or_equal: IntervalNode(\n",
-      "                                    name: Age,\n",
-      "                                    tboundary: 42,\n",
-      "                                    smaller: LeafNode(1),\n",
-      "                                    greater_or_equal: LeafNode(0)\n",
-      "                                )\n",
-      "                            )\n",
-      "                        )\n",
-      "                    )\n",
-      "                ),\n",
-      "                greater_or_equal: IntervalNode(\n",
       "                    name: Parch,\n",
       "                    tboundary: 1,\n",
       "                    smaller: LeafNode(0),\n",
       "                    greater_or_equal: IntervalNode(\n",
-      "                        name: Age,\n",
-      "                        tboundary: 33,\n",
-      "                        smaller: LeafNode(0),\n",
-      "                        greater_or_equal: IntervalNode(\n",
-      "                            name: Parch,\n",
-      "                            tboundary: 5,\n",
-      "                            smaller: LeafNode(1),\n",
-      "                            greater_or_equal: LeafNode(0)\n",
-      "                        )\n",
+      "                        name: SibSp,\n",
+      "                        tboundary: 3,\n",
+      "                        smaller: LeafNode(1),\n",
+      "                        greater_or_equal: LeafNode(0)\n",
       "                    )\n",
       "                )\n",
       "            )\n",
@@ -678,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 233,
    "id": "72b09c40-8f3b-4179-8e68-66c4776a82af",
    "metadata": {},
    "outputs": [
@@ -686,7 +641,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy: 0.85\n"
+      "Test accuracy: 0.8\n"
      ]
     }
    ],
@@ -702,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 234,
    "id": "d2034d6b-5572-48a7-b15f-7daf647ea57e",
    "metadata": {},
    "outputs": [
@@ -736,16 +691,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1f91bb86-d1e5-4c8d-81fa-7e06110776a1",
+   "execution_count": 235,
+   "id": "cc6198ef",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def enumerate_tree(node, depth=0):\n",
+    "    if isinstance(node, ClassNode):\n",
+    "        print('|     '*(depth),'|---- ', node.name, sep='')\n",
+    "        for edgeName, child in node.edges.items():\n",
+    "            print('|     '*(depth+1),'|---- ', edgeName, sep='')\n",
+    "            enumerate_tree(child, depth+1)\n",
+    "    elif isinstance(node, IntervalNode):\n",
+    "        print('|     '*(depth+1),'|---- ', node.name, ' < ', node.boundary, sep='')\n",
+    "        print('|     '*(depth+2),'|---- ', \"YES\", sep='')\n",
+    "        enumerate_tree(node.smaller, depth+2)\n",
+    "        print('|     '*(depth+2),'|---- ', \"NO\", sep='')\n",
+    "        enumerate_tree(node.greater_or_equal, depth+2)\n",
+    "    elif isinstance(node, LeafNode):\n",
+    "        print('|     '*(depth+1),'|---- ', node.value, sep='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "id": "1f91bb86-d1e5-4c8d-81fa-7e06110776a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|---- Sex\n",
+      "|     |---- male\n",
+      "|     |     |---- Pclass < 3\n",
+      "|     |     |     |---- YES\n",
+      "|     |     |     |     |---- Age < 29\n",
+      "|     |     |     |     |     |---- YES\n",
+      "|     |     |     |     |     |     |---- SibSp < 1\n",
+      "|     |     |     |     |     |     |     |---- YES\n",
+      "|     |     |     |     |     |     |     |     |---- Pclass < 2\n",
+      "|     |     |     |     |     |     |     |     |     |---- YES\n",
+      "|     |     |     |     |     |     |     |     |     |     |---- 1\n",
+      "|     |     |     |     |     |     |     |     |     |---- NO\n",
+      "|     |     |     |     |     |     |     |     |     |     |---- Age < 21\n",
+      "|     |     |     |     |     |     |     |     |     |     |     |---- YES\n",
+      "|     |     |     |     |     |     |     |     |     |     |     |     |---- 1\n",
+      "|     |     |     |     |     |     |     |     |     |     |     |---- NO\n",
+      "|     |     |     |     |     |     |     |     |     |     |     |     |---- 0\n",
+      "|     |     |     |     |     |     |     |---- NO\n",
+      "|     |     |     |     |     |     |     |     |---- 0\n",
+      "|     |     |     |     |     |---- NO\n",
+      "|     |     |     |     |     |     |---- 0\n",
+      "|     |     |     |---- NO\n",
+      "|     |     |     |     |---- 0\n",
+      "|     |---- female\n",
+      "|     |     |---- SibSp < 1\n",
+      "|     |     |     |---- YES\n",
+      "|     |     |     |     |---- 1\n",
+      "|     |     |     |---- NO\n",
+      "|     |     |     |     |---- Pclass < 3\n",
+      "|     |     |     |     |     |---- YES\n",
+      "|     |     |     |     |     |     |---- 1\n",
+      "|     |     |     |     |     |---- NO\n",
+      "|     |     |     |     |     |     |---- Parch < 1\n",
+      "|     |     |     |     |     |     |     |---- YES\n",
+      "|     |     |     |     |     |     |     |     |---- 0\n",
+      "|     |     |     |     |     |     |     |---- NO\n",
+      "|     |     |     |     |     |     |     |     |---- SibSp < 3\n",
+      "|     |     |     |     |     |     |     |     |     |---- YES\n",
+      "|     |     |     |     |     |     |     |     |     |     |---- 1\n",
+      "|     |     |     |     |     |     |     |     |     |---- NO\n",
+      "|     |     |     |     |     |     |     |     |     |     |---- 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "enumerate_tree(model)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -759,7 +787,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
