--- a/DecisionTree.ipynb
+++ b/DecisionTree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 283,
    "id": "3fe06475-f688-4cde-8e9b-e2075b166625",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 284,
    "id": "88a80ebb-fa5f-4b26-832f-b702b95a67f1",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "[100 rows x 6 columns]"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 284,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 285,
    "id": "3b89c2f5-1ed8-4a5e-b741-bac15a94e4a8",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 286,
    "id": "5b906239-e8a0-49f2-8289-038276feb143",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 287,
    "id": "24e31cea-0e3b-4bc6-99bc-789e1f80ce1a",
    "metadata": {},
    "outputs": [],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 288,
    "id": "5ec90481-5a9b-4112-8bfe-02b61a31de63",
    "metadata": {},
    "outputs": [],
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 289,
    "id": "a492e56e-5e69-41a8-8152-599010df1eaf",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 290,
    "id": "a0c06721-862e-4bcc-82ec-497cc890a355",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 291,
    "id": "12d07272-a95d-45c1-a8e9-2111d850b99c",
    "metadata": {},
    "outputs": [],
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 292,
    "id": "904b9075-61d5-4d9c-91c5-69c71934bad0",
    "metadata": {},
    "outputs": [],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 293,
    "id": "416769e7-763b-4a5d-a888-db24c58c7559",
    "metadata": {},
    "outputs": [],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 294,
    "id": "c2ce2b25-f1aa-4cf1-9c2c-bdc3f0a7f588",
    "metadata": {},
    "outputs": [],
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 295,
    "id": "2153c447-8c53-4a97-aa2c-f031e3e42cf6",
    "metadata": {},
    "outputs": [],
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 296,
    "id": "a1690103-e77f-4fe8-956c-90f5409b30ec",
    "metadata": {},
    "outputs": [],
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 297,
    "id": "8d987ad5-3096-4145-b672-2b5ff8a55afa",
    "metadata": {},
    "outputs": [],
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 298,
    "id": "6c056347-3e1a-4ce3-b911-19837dfef2ae",
    "metadata": {},
    "outputs": [],
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 299,
    "id": "b927ed65-a4d1-4d02-8e3c-bf72c3c6f0bb",
    "metadata": {},
    "outputs": [],
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 314,
    "id": "6f4d5dc4-4f1b-4e27-9d9f-290f98e0b627",
    "metadata": {},
    "outputs": [],
@@ -525,7 +525,6 @@
     "        # wywal kolumnę z najbliższego korzenia\n",
     "        # nie chcemy powtarzać w kółko tego samego podziału\n",
     "        cur_columns = columns.drop(feature) if feature is not None else columns\n",
-    "\n",
     "        # szukamy najlepszego podziału\n",
     "        best_gain = float('-inf')\n",
     "        best_division = None\n",
@@ -538,8 +537,13 @@
     "                best_division = division\n",
     "                best_column = column\n",
     "\n",
+    "        if best_gain <= 0:\n",
+    "            set_node(LeafNode(leaf_value(S, data, decision)))\n",
+    "            continue\n",
+    "\n",
     "        # jeśli podział jest podziałem liczbowym\n",
     "        if type(best_division) is NumericDivision:\n",
+    "\n",
     "            node = IntervalNode(best_column, best_division.boundary)\n",
     "            # sprawdź czy podzbiór podziału danej krawędzi jest liściem i jak tak to go dodaj\n",
     "            # a jak nie to dodaj ten podzbiór na kolejkę do przetworzenia (to samo w kolejnej linii)\n",
@@ -551,9 +555,11 @@
     "            # a jak nie to dodaj ten podzbiór na kolejkę do przetworzenia\n",
     "            for k, v in best_division.edges.items():\n",
     "                check_node(best_division.edges[k], best_column, partial(ClassNode.add_edge, node, k))\n",
+    "\n",
     "            # zapewnij, że w drzewie będą krawędzie, których już brakuje w podzbiorze zbioru danych\n",
     "            for k in (set(data[best_column].unique().tolist()) - set(best_division.edges.keys())):\n",
     "                node.add_edge(k, LeafNode(leaf_value([], data, decision)))\n",
+    "\n",
     "\n",
     "        # ustaw krawędź pobranego node'a\n",
     "        set_node(node)\n",
@@ -563,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 315,
    "id": "6fc87ec9-fca9-4f47-9eb3-c0509dec8e9b",
    "metadata": {},
    "outputs": [
@@ -574,47 +580,57 @@
       "ClassNode(\n",
       "    name: Sex,\n",
       "    edges: {\n",
+      "        female: IntervalNode(\n",
+      "            name: Pclass,\n",
+      "            tboundary: 3,\n",
+      "            smaller: LeafNode(1),\n",
+      "            greater_or_equal: IntervalNode(\n",
+      "                name: SibSp,\n",
+      "                tboundary: 1,\n",
+      "                smaller: LeafNode(1),\n",
+      "                greater_or_equal: IntervalNode(\n",
+      "                    name: Age,\n",
+      "                    tboundary: 8,\n",
+      "                    smaller: LeafNode(1),\n",
+      "                    greater_or_equal: IntervalNode(\n",
+      "                        name: Parch,\n",
+      "                        tboundary: 2,\n",
+      "                        smaller: IntervalNode(\n",
+      "                            name: Age,\n",
+      "                            tboundary: 33,\n",
+      "                            smaller: LeafNode(0),\n",
+      "                            greater_or_equal: LeafNode(1)\n",
+      "                        ),\n",
+      "                        greater_or_equal: IntervalNode(\n",
+      "                            name: Age,\n",
+      "                            tboundary: 17,\n",
+      "                            smaller: LeafNode(0),\n",
+      "                            greater_or_equal: LeafNode(1)\n",
+      "                        )\n",
+      "                    )\n",
+      "                )\n",
+      "            )\n",
+      "        ),\n",
       "        male: IntervalNode(\n",
       "            name: Pclass,\n",
       "            tboundary: 3,\n",
       "            smaller: IntervalNode(\n",
       "                name: Age,\n",
-      "                tboundary: 29,\n",
-      "                smaller: IntervalNode(\n",
-      "                    name: SibSp,\n",
-      "                    tboundary: 1,\n",
-      "                    smaller: IntervalNode(\n",
-      "                        name: Pclass,\n",
-      "                        tboundary: 2,\n",
-      "                        smaller: LeafNode(1),\n",
-      "                        greater_or_equal: IntervalNode(\n",
-      "                            name: Age,\n",
-      "                            tboundary: 21,\n",
-      "                            smaller: LeafNode(1),\n",
-      "                            greater_or_equal: LeafNode(0)\n",
-      "                        )\n",
-      "                    ),\n",
-      "                    greater_or_equal: LeafNode(0)\n",
-      "                ),\n",
+      "                tboundary: 19,\n",
+      "                smaller: LeafNode(1),\n",
       "                greater_or_equal: LeafNode(0)\n",
       "            ),\n",
-      "            greater_or_equal: LeafNode(0)\n",
-      "        ),\n",
-      "        female: IntervalNode(\n",
-      "            name: SibSp,\n",
-      "            tboundary: 1,\n",
-      "            smaller: LeafNode(1),\n",
       "            greater_or_equal: IntervalNode(\n",
-      "                name: Pclass,\n",
-      "                tboundary: 3,\n",
-      "                smaller: LeafNode(1),\n",
+      "                name: Parch,\n",
+      "                tboundary: 1,\n",
+      "                smaller: LeafNode(0),\n",
       "                greater_or_equal: IntervalNode(\n",
-      "                    name: Parch,\n",
-      "                    tboundary: 1,\n",
+      "                    name: Age,\n",
+      "                    tboundary: 33,\n",
       "                    smaller: LeafNode(0),\n",
       "                    greater_or_equal: IntervalNode(\n",
-      "                        name: SibSp,\n",
-      "                        tboundary: 3,\n",
+      "                        name: Parch,\n",
+      "                        tboundary: 5,\n",
       "                        smaller: LeafNode(1),\n",
       "                        greater_or_equal: LeafNode(0)\n",
       "                    )\n",
@@ -633,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 328,
    "id": "72b09c40-8f3b-4179-8e68-66c4776a82af",
    "metadata": {},
    "outputs": [
@@ -641,7 +657,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy: 0.8\n"
+      "Test accuracy: 0.9\n"
      ]
     }
    ],
@@ -657,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 320,
    "id": "d2034d6b-5572-48a7-b15f-7daf647ea57e",
    "metadata": {},
    "outputs": [
@@ -665,7 +681,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train accuracy: 1.0\n"
+      "Train accuracy: 0.975\n"
      ]
     }
    ],
@@ -691,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": null,
    "id": "cc6198ef",
    "metadata": {},
    "outputs": [],
@@ -714,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 316,
    "id": "1f91bb86-d1e5-4c8d-81fa-7e06110776a1",
    "metadata": {},
    "outputs": [
@@ -723,42 +739,50 @@
      "output_type": "stream",
      "text": [
       "|---- Sex\n",
-      "|     |---- male\n",
-      "|     |     |---- Pclass < 3\n",
-      "|     |     |     |---- YES\n",
-      "|     |     |     |     |---- Age < 29\n",
-      "|     |     |     |     |     |---- YES\n",
-      "|     |     |     |     |     |     |---- SibSp < 1\n",
-      "|     |     |     |     |     |     |     |---- YES\n",
-      "|     |     |     |     |     |     |     |     |---- Pclass < 2\n",
-      "|     |     |     |     |     |     |     |     |     |---- YES\n",
-      "|     |     |     |     |     |     |     |     |     |     |---- 1\n",
-      "|     |     |     |     |     |     |     |     |     |---- NO\n",
-      "|     |     |     |     |     |     |     |     |     |     |---- Age < 21\n",
-      "|     |     |     |     |     |     |     |     |     |     |     |---- YES\n",
-      "|     |     |     |     |     |     |     |     |     |     |     |     |---- 1\n",
-      "|     |     |     |     |     |     |     |     |     |     |     |---- NO\n",
-      "|     |     |     |     |     |     |     |     |     |     |     |     |---- 0\n",
-      "|     |     |     |     |     |     |     |---- NO\n",
-      "|     |     |     |     |     |     |     |     |---- 0\n",
-      "|     |     |     |     |     |---- NO\n",
-      "|     |     |     |     |     |     |---- 0\n",
-      "|     |     |     |---- NO\n",
-      "|     |     |     |     |---- 0\n",
       "|     |---- female\n",
-      "|     |     |---- SibSp < 1\n",
+      "|     |     |---- Pclass < 3\n",
       "|     |     |     |---- YES\n",
       "|     |     |     |     |---- 1\n",
       "|     |     |     |---- NO\n",
-      "|     |     |     |     |---- Pclass < 3\n",
+      "|     |     |     |     |---- SibSp < 1\n",
       "|     |     |     |     |     |---- YES\n",
       "|     |     |     |     |     |     |---- 1\n",
       "|     |     |     |     |     |---- NO\n",
-      "|     |     |     |     |     |     |---- Parch < 1\n",
+      "|     |     |     |     |     |     |---- Age < 8\n",
+      "|     |     |     |     |     |     |     |---- YES\n",
+      "|     |     |     |     |     |     |     |     |---- 1\n",
+      "|     |     |     |     |     |     |     |---- NO\n",
+      "|     |     |     |     |     |     |     |     |---- Parch < 2\n",
+      "|     |     |     |     |     |     |     |     |     |---- YES\n",
+      "|     |     |     |     |     |     |     |     |     |     |---- Age < 33\n",
+      "|     |     |     |     |     |     |     |     |     |     |     |---- YES\n",
+      "|     |     |     |     |     |     |     |     |     |     |     |     |---- 0\n",
+      "|     |     |     |     |     |     |     |     |     |     |     |---- NO\n",
+      "|     |     |     |     |     |     |     |     |     |     |     |     |---- 1\n",
+      "|     |     |     |     |     |     |     |     |     |---- NO\n",
+      "|     |     |     |     |     |     |     |     |     |     |---- Age < 17\n",
+      "|     |     |     |     |     |     |     |     |     |     |     |---- YES\n",
+      "|     |     |     |     |     |     |     |     |     |     |     |     |---- 0\n",
+      "|     |     |     |     |     |     |     |     |     |     |     |---- NO\n",
+      "|     |     |     |     |     |     |     |     |     |     |     |     |---- 1\n",
+      "|     |---- male\n",
+      "|     |     |---- Pclass < 3\n",
+      "|     |     |     |---- YES\n",
+      "|     |     |     |     |---- Age < 19\n",
+      "|     |     |     |     |     |---- YES\n",
+      "|     |     |     |     |     |     |---- 1\n",
+      "|     |     |     |     |     |---- NO\n",
+      "|     |     |     |     |     |     |---- 0\n",
+      "|     |     |     |---- NO\n",
+      "|     |     |     |     |---- Parch < 1\n",
+      "|     |     |     |     |     |---- YES\n",
+      "|     |     |     |     |     |     |---- 0\n",
+      "|     |     |     |     |     |---- NO\n",
+      "|     |     |     |     |     |     |---- Age < 33\n",
       "|     |     |     |     |     |     |     |---- YES\n",
       "|     |     |     |     |     |     |     |     |---- 0\n",
       "|     |     |     |     |     |     |     |---- NO\n",
-      "|     |     |     |     |     |     |     |     |---- SibSp < 3\n",
+      "|     |     |     |     |     |     |     |     |---- Parch < 5\n",
       "|     |     |     |     |     |     |     |     |     |---- YES\n",
       "|     |     |     |     |     |     |     |     |     |     |---- 1\n",
       "|     |     |     |     |     |     |     |     |     |---- NO\n",
