--- a/Exercises_kmeans.ipynb
+++ b/Exercises_kmeans.ipynb
@@ -4327,7 +4327,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analiza korelacji"
+    "# Analiza korelacji\n",
+    "\n",
+    "Poniżej przedstawione są duplikaty obliczonych komórek korelacji powyżej dla każdego zbioru, żeby wszystko mieć w jednym miejscu:"
    ]
   },
   {
@@ -4656,7 +4658,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
