--- a/Exercises_kmeans.ipynb
+++ b/Exercises_kmeans.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Autorzy\n",
+    "- Igor Santarek (154059)\n",
+    "- Mateusz Tata (154037)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 1. Attribute selection in classification problems\n",
     "\n",
     "### Curse of dimensionality\n",
@@ -903,6 +912,13 @@
     "scaler = MinMaxScaler()\n",
     "X_normalized = scaler.fit_transform(df)\n",
     "df_normalized = pd.DataFrame(X_normalized, columns=df.columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Z uwagi na to, że algorytm KMeans jest oparty na odgległości euklidesowej, przez wyliczanie odległości do centroidów należy przeskalować cechy, w tym przypadku wykorzystaliśmy MinMaxScaler, który sprowadza wszystkie wartości do skali [0,1]."
    ]
   },
   {
@@ -4644,7 +4660,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -4658,7 +4674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
